<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="yandex_practicum_URL">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="my_email">bigmag174@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_URL">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="internet_issues">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="server_issues">Ошибка сервера</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_already_searched">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="time00_00" translatable="false">00:00</string>
    <string name="your_media_library_is_empty">Ваша медиатека пуста</string>
    <string name="you_havent_created_a_single_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="there_is_no_app_on_the_device_to_make_this_request">На устройстве нет приложения для выполнения этого запроса</string>
    <string name="there_is_no_app_on_the_device_to_send_email">На устройстве нет приложения для отправки почты</string>
    <string name="there_is_no_browser_on_the_device">На устройстве отсутствует браузер</string>
    <string name="name_with_star">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="finish_creating_a_playlist">Завершить создание плейлиста?</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="tracks">треков</string>
    <string name="tracks_1">трек</string>
    <string name="tracks_2">трека</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_has_already_been_added_to_the_playlist">Трек уже добавлен в плейлист:</string>
    <string name="added_to_playlist">Добавлено в плейлист:</string>
    <string name="minutes">минут</string>
    <string name="minutes_1">минута</string>
    <string name="minutes_2">минуты</string>
    <string name="do_you_want_to_delete_track">Хотите удалить трек?</string>
    <string name="yes_caps">ДА</string>
    <string name="no_caps">НЕТ</string>
    <string name="there_is_no_track_list_to_share_in_this_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="do_you_want_to_delete_playlist">Хотите удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="playlist_empty">Плейлист пуст</string>

</resources>