<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    android:padding="@dimen/common_padding"
    tools:context=".main.ui.MainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold" />

    <Button
        android:id="@+id/searchButton"
        style="@style/mainScreenButtonStyle"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <Button
        android:id="@+id/mediaLibraryButton"
        style="@style/mainScreenButtonStyle"
        android:scaleType="center"
        android:text="@string/media_library"
        app:icon="@drawable/media_library_icon" />

    <Button
        android:id="@+id/settingsButton"
        style="@style/mainScreenButtonStyle"
        android:text="@string/settings"
        app:icon="@drawable/settings" />


</LinearLayout>