<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            style="@style/backButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:foreground="?attr/selectableItemBackground"
            android:padding="20dp"
            android:src="@drawable/back_icon" />

        <TextView
            style="@style/settingsTextViewStyle"
            android:layout_marginStart="64dp"
            android:text="@string/settings"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_size"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="24dp">

        <TextView
            style="@style/settingsTextViewStyle"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/switchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/shareButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_size">

        <TextView
            style="@style/settingsTextViewStyle"
            android:text="@string/share_app" />

        <ImageView
            style="@style/iconsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/common_padding"
            android:src="@drawable/share_icon" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/supportButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_size">

        <TextView
            style="@style/settingsTextViewStyle"
            android:text="@string/write_to_support" />

        <ImageView
            style="@style/iconsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="14dp"
            android:src="@drawable/support_icon" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/userAgreementButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_size">

        <TextView
            style="@style/settingsTextViewStyle"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/iconsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            android:src="@drawable/arrow_forward" />
    </FrameLayout>
</LinearLayout>