<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".creationPlaylist.ui.activity.CreationPlaylistFragment">

    <ImageView
        android:id="@+id/backButton"
        style="@style/backButtonStyle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newPlaylistTextView"
        style="@style/headerTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginTop="@dimen/common_padding"
        android:text="@string/new_playlist"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/addPhotoImageView"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="42dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/add_playlist_image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPlaylistTextView"
        app:shapeAppearanceOverlay="@style/rounded_image_view" />


    <EditText
        android:id="@+id/playlistNameEditText"
        style="@style/new_playlist_editText_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/common_padding"
        android:background="@drawable/solid_border"
        android:hint="@string/name_with_star"
        android:padding="@dimen/common_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhotoImageView" />

    <EditText
        android:id="@+id/descriptionEditText"
        style="@style/new_playlist_editText_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="@dimen/common_padding"
        android:layout_marginEnd="@dimen/common_padding"
        android:background="@drawable/solid_border"
        android:hint="@string/description"
        android:padding="@dimen/common_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlistNameEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createNewPlaylistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginEnd="@dimen/common_padding"
        android:layout_marginBottom="32dp"
        android:background="@drawable/gray_or_blue_rectangle"
        android:enabled="false"
        android:text="@string/create"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>