<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".AudioPlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dp24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dp24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midHorizontalBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/backButton"
        style="@style/backButtonStyle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="@dimen/common_padding"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/back_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/trackIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp40"
        android:layout_marginBottom="@dimen/common_padding"
        android:scaleType="centerCrop"
        android:src="@drawable/playlists"
        app:layout_constraintBottom_toBottomOf="@id/midHorizontalBorder"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="@id/leftBorder"
        app:layout_constraintRight_toRightOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <TextView
        android:id="@+id/trackName"
        style="@style/blackAndWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_size"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toRightOf="@id/leftBorder"
        app:layout_constraintRight_toLeftOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/midHorizontalBorder" />

    <TextView
        android:id="@+id/artistName"
        style="@style/blackAndWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toRightOf="@id/leftBorder"
        app:layout_constraintRight_toLeftOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@+id/trackName" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addToPlaylistButton"
        style="@style/FAB_color"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:src="@drawable/add_to_playlist"
        app:elevation="0dp"
        app:fabCustomSize="51dp"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="@id/leftBorder"
        app:layout_constraintRight_toLeftOf="@id/playButton"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/playButton"
        style="@style/backButtonStyle"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="@dimen/common_padding"
        android:src="@drawable/play_button"
        app:layout_constraintLeft_toRightOf="@id/addToPlaylistButton"
        app:layout_constraintRight_toLeftOf="@id/likeButton"
        app:layout_constraintTop_toBottomOf="@id/artistName" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/likeButton"
        style="@style/FAB_color"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:src="@drawable/like"
        app:elevation="0dp"
        app:fabCustomSize="51dp"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintLeft_toRightOf="@id/playButton"
        app:layout_constraintRight_toLeftOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/playTime"
        style="@style/blackAndWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding"
        android:fontFamily="@font/ys_display_medium"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/playButton" />

    <TextView
        android:id="@+id/durationLeft"
        style="@style/audio_player_left_border_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@id/albumLeft"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playTime" />

    <TextView
        android:id="@+id/albumLeft"
        style="@style/audio_player_left_border_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@id/yearLeft"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/durationLeft" />

    <TextView
        android:id="@+id/yearLeft"
        style="@style/audio_player_left_border_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/genreLeft"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumLeft" />

    <TextView
        android:id="@+id/genreLeft"
        style="@style/audio_player_left_border_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/countryLeft"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yearLeft" />

    <TextView
        android:id="@+id/countryLeft"
        style="@style/audio_player_left_border_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genreLeft" />


    <TextView
        android:id="@+id/durationRight"
        style="@style/audio_player_right_border_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/durationLeft"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/albumRight"
        style="@style/audio_player_right_border_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/albumLeft"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toRightOf="@id/albumLeft"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/yearRight"
        style="@style/audio_player_right_border_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/yearLeft"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/genreRight"
        style="@style/audio_player_right_border_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/genreLeft"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/countryRight"
        style="@style/audio_player_right_border_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/countryLeft"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>